--- a/frontend/src/components/10layout/10header/demoNavbar.module.css
+++ b/frontend/src/components/10layout/10header/demoNavbar.module.css
@@ -12,7 +12,7 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	height: 3.5rem;
+	height: 56px;
 	width: 100%;
 	padding-left: 0.75rem;
 	padding-right: 1.5rem;
